src/objects/Campaign_Project_Event__c.object
<CustomObject>
    <fields>
        <fullName>APS_Program__c</fullName>
        <label>APS Program</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Event_Dates__c</fullName>
        <label>All Event Dates</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Number__c</fullName>
        <label>Block Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Campaign Project Event Announcements</relationshipLabel>
        <relationshipName>Event_Announcements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Instructions__c</fullName>
        <label>Disclaimer Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Title_Event_Announcement_Title__c</fullName>
        <label>Event Title (Event Announcement Title)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reservation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reservation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rules_Regulations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rules &amp; Regulations</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Project Event Announcement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Project Event Announcements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>